--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -936,7 +936,7 @@ a {
     box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
   }
   .mdc-card__info--organisation-title {
-    margin: 0 0 $unit/2;
+    margin: 0 0 $unit;
   }
   .mdc-card__info--vacancy .detailed-info,
   .organisation-type {
@@ -1413,7 +1413,7 @@ body {
     height: auto;
     display: flex;
     align-items: top;
-    margin: $unit/2 0 0 $unit;
+    margin: 0 0 0 $unit;
     padding: 0;
     img {
       width: 100%;
@@ -1455,6 +1455,7 @@ body {
   }
 }
 .goodmoves-organisation {
+  margin-bottom: $unit*1.5;
   .mdc-card.full {
     background-color: transparent;
   }
