--- a/sites/configurations/scvo/templates/pages/page-home.hbs
+++ b/sites/configurations/scvo/templates/pages/page-home.hbs
@@ -276,7 +276,7 @@
           {{{_source.rendered.scvo_gist}}}
           {{/each ~}}
           <h2>
-            <a href="http://thirdforcenews.org.uk">Read more on TFN</a>
+            <a href="http://thirdforcenews.org.uk/?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Read more on TFN</a>
           </h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone no-border">
