--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -236,7 +236,7 @@
             <option value="salary_high"{{#compare request.params.query.sort "===" "salary_high"}} selected{{/compare}}>Salary - high to low</option>
             <option value="salary_low"{{#compare request.params.query.sort "===" "salary_low"}} selected{{/compare}}>Salary - low to high</option>
           </select>
-          <label class="mdc-floating-label" for="sort">
+          <label class="mdc-floating-label mdc-select__label--float-above" for="sort">
             Sort
           </label>
         </div>
