--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -47,6 +47,9 @@
         <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
           Sign in
         </button>
+        <div class="mdc-typography--body1 v-margin-full">
+          Don't have an account? <a href="/sign-up">Sign up</a>
+        </div>
       </div>
       <div class="card-loader" id="sign-in-loader">
         <div class="card-loader-inner">
