--- a/sites/configurations/goodmoves/partials/vacancy/map.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/map.hbs
@@ -1,4 +1,4 @@
-<div class="goodmoves-vacancy goodmoves-{{vacancy_status}} map-content">
+<div class="goodmoves-{{vacancy_status}} map-content">
   <h3>{{title}}</h3>
   {{#if organisation.name}}
   <div>
