--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -1,27 +1,7 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-shortlist">
-  {{#compare data.search_data.shortlist.hits.total ">" 0}}
-  <div class="settings v-margin-full">
-    <div class="mdc-form-field">
-      <div class="mdc-checkbox">
-        <input type="checkbox"
-               class="mdc-checkbox__native-control"
-               id="closing-alerts"/>
-        <div class="mdc-checkbox__background">
-          <svg class="mdc-checkbox__checkmark"
-               viewBox="0 0 24 24">
-            <path class="mdc-checkbox__checkmark-path"
-                  fill="none"
-                  d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-          </svg>
-          <div class="mdc-checkbox__mixedmark"></div>
-        </div>
-      </div>
-      <label for="closing-alerts">Send ‘closing soon’ alerts</label>
-    </div>
-  </div>
-  {{/compare}}
+  <div class="t-margin-full pull-right">{{> shortlist_alerts}}</div>
   <h1 class="mdc-typography--headline3 v-margin-full">
     Shortlist
   </h1>
