--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1790,10 +1790,6 @@ footer,
   padding: 0 $unit 0 !important;
   position: relative;
 }
-// .currently-recruiting,
-// .home-jobs {
-//   box-shadow: $toolbar-shadow-reverse;
-// }
 .home .tfn-latest {
   background-color: $mdc-theme-secondary-light;
   .mdc-typography--headline5 {
@@ -1830,7 +1826,7 @@ footer,
 }
 .currently-recruiting {
   padding: $unit/4 $unit*1.5 $unit/3 !important;
-  background-color: $mdc-theme-secondary;
+  background-color: white;
   .organisation-logo:before {
     content: "";
     display: block;
