--- a/sites/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/sites/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -1,4 +1,4 @@
-<section class="currently-recruiting">
+<section class="currently-recruiting v-margin-full mdc-elevation--z3">
   <div class="mdc-typography--headline5 v-margin-full">
     Currently recruiting&ensp;
     <span class="mdc-typography--body1">
