--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -90,7 +90,7 @@
     <div class="mdc-layout-grid home-heading">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <div class="mdc-typography--headline5">
+          <div class="mdc-typography--headline5 v-margin-full">
             Your shortlist
           </div>
         </div>
@@ -147,14 +147,14 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         {{#if data.auth ~}}
         <div class="mdc-typography--headline5">
-          Your latest jobs
+          Your latest jobs&ensp;
           <span class="mdc-typography--body1">
             <a href="/searches">Your searches</a>
           </span>
         </div>
         {{else}}
         <div class="mdc-typography--headline5">
-          Latest jobs
+          Latest jobs&ensp;
           <span class="mdc-typography--body1">
             <a href="/search?sort=newest&page=2">Find more</a>
           </span>
@@ -196,7 +196,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <div class="mdc-typography--headline5">
-          Top jobs
+          Top jobs&ensp;
           <span class="mdc-typography--body1">
             <a href="/search">Find more</a>
           </span>
