--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -468,9 +468,11 @@ footer h3,
     }
   }
 }
-.goodmoves-vacancy,
+.goodmoves-vacancy {
+  margin-bottom: $unit*2.2;
+}
 .goodmoves-related-jobs {
-  margin-bottom: $unit*2.5;
+  margin-bottom: $unit*1.5;
 }
 .goodmoves-vacancy-search {
   .head {
@@ -1791,13 +1793,15 @@ footer,
   position: relative;
 }
 .home .tfn-latest {
+  padding: 0 $unit*1.5 0 !important;
   background-color: $mdc-theme-secondary-light;
+  margin-bottom: 0 !important;
   .mdc-typography--headline5 {
     margin-top: 0;
   }
 }
 .tfn-latest {
-  padding: 0 $unit*1.5 0 !important;
+  margin-bottom: $unit*1.5;
   .mdc-card {
     box-shadow: none;
   }
