--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -858,14 +858,13 @@ a {
 .goodmoves-vacancy-closed.mdc-card.search-result {
   border-top: none;
 }
+.goodmoves-vacancy.mdc-card.list,
+.goodmoves-vacancy.mdc-card.gist,
 .goodmoves-vacancy.mdc-card.mini {
   .mdc-typography--headline5 {
     font-size: 1.2rem;
     line-height: 1.3rem;
   }
-  // .fa-ul li:last-child {
-  //   margin-bottom: 0;
-  // }
   .mdc-card .mdc-card__actions {
     padding: $unit/3 $unit/2;
   }
@@ -1424,9 +1423,11 @@ body {
     }
   }
 }
-.mdc-card.list {
-  .mdc-card__media--organisation {
-    display: none;
+.goodmoves-organisation {
+  .mdc-card.list {
+    .mdc-card__media--organisation {
+      display: none;
+    }
   }
 }
 .mdc-card.full {
