--- a/sites/configurations/goodmoves/partials/tfn-related.hbs
+++ b/sites/configurations/goodmoves/partials/tfn-related.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-layout-grid tfn tfn-latest">
   <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       <div class="mdc-typography--headline5 v-margin-full">
         Related articles on <a href="http://thirdforcenews.org.uk?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Third Force News</a>
       </div>
