Refactored job -> vacancy

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -329,6 +329,10 @@ footer h3,
   font-size: 1.3rem;
   line-height: 1.4rem;
 }
+.mdc-typography--headline7 {
+  font-size: 1.15rem;
+  line-height: 1.2rem;
+}
 .mdc-card__title,
 .mdc-textfield__label,
 .mdc-typography--title,
