--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -592,7 +592,7 @@ primary-dark: #263238
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/saltire.jpg');
   }
   .community-jobs-scotland .callout-image.jobs {
-    background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/cjs-jobs.png');
+    background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/cjs-vacancys.png');
   }
   .community-jobs-scotland .callout-image.benefit {
     background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/newcjsbanner.jpg');
@@ -695,14 +695,14 @@ primary-dark: #263238
 .running-your-organisation {
   @include theme-colours('charity');
 }
-.search-result.cjs-job,
+.search-result.cjs-vacancy,
 .employability,
 .employment,
 .jobs {
   @include theme-colours('jobs');
 }
 .goodmoves,
-.search-result.goodmoves-job,
+.search-result.goodmoves-vacancy,
 .services.goodmoves {
   @include theme-colours('goodmoves');
 }
@@ -785,7 +785,7 @@ primary-dark: #263238
 .home .featured-content,
 .home .latest-content,
 .home .gist.scvo-cms-post,
-.home .gist.goodmoves-job,
+.home .gist.goodmoves-vacancy,
 .home .gist.tfn-post {
   @include theme-colours('services');
 }
@@ -1385,7 +1385,7 @@ section.search {
     line-height: 1.8;
   }
 }
-.gist.goodmoves-job .thumbnail img {
+.gist.goodmoves-vacancy .thumbnail img {
   object-fit: contain;
 }
 .page-related .gist img.photo-wee,
@@ -2965,8 +2965,8 @@ body.post.author {
     }
   }
 }
-.cjs-job-search .inline-dl,
-.cjs-job .inline-dl,
+.cjs-vacancy-search .inline-dl,
+.cjs-vacancy .inline-dl,
 .staff-team .inline-dl {
   clear: both;
   margin: 0;
@@ -2996,14 +2996,14 @@ body.post.author {
     width: 60%;
   }
 }
-.full.cjs-job {
+.full.cjs-vacancy {
   hr,
   h2,
   h3 {
     clear: left;
   }
 }
-.list.cjs-job {
+.list.cjs-vacancy {
   .mdc-card__title {
     padding: 0;
   }
