--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-apply.hbs
@@ -1,4 +1,4 @@
-<div class="cjs-job">
+<div class="cjs-vacancy">
   {{> header_splash}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
