--- a/sites/configurations/scvo/templates/jobs/goodmoves-vacancy-search.hbs
+++ b/sites/configurations/scvo/templates/jobs/goodmoves-vacancy-search.hbs
@@ -1,4 +1,4 @@
-<div class="goodmoves-job-search">
+<div class="goodmoves-vacancy-search">
   {{> header_splash headerTextOverride="Job search" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
