--- a/sites/configurations/scvo/templates/main_search/search.hbs
+++ b/sites/configurations/scvo/templates/main_search/search.hbs
@@ -64,8 +64,8 @@
             {{>filter_checkbox label="Posts" value="goodhq-post"}}
 
             <h3>Jobs</h3>
-            {{>filter_checkbox label="Goodmoves jobs" value="goodmoves-job"}}
-            {{>filter_checkbox label="CJS vacancies" value="cjs-job"}}
+            {{>filter_checkbox label="Goodmoves jobs" value="goodmoves-vacancy"}}
+            {{>filter_checkbox label="CJS vacancies" value="cjs-vacancy"}}
 
             <h3>TFN</h3>
             {{>filter_checkbox label="Blog posts" value="tfn-blog-post"}}
