--- a/sites/configurations/scvo/templates/account/cjs-sign-out.hbs
+++ b/sites/configurations/scvo/templates/account/cjs-sign-out.hbs
@@ -1,4 +1,4 @@
-<div class="cjs-job">
+<div class="cjs-vacancy">
   {{> header_splash headerTextOverride="CJS vacancies" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
