--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
@@ -1,4 +1,4 @@
-<div class="cjs-job-search">
+<div class="cjs-vacancy-search">
   {{> header_splash headerTextOverride="CJS vacancies" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
