--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy.hbs
@@ -1,4 +1,4 @@
-<div class="cjs-job">
+<div class="cjs-vacancy">
   {{> header_splash sub_title="cjs"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
