--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -1,33 +1,7 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
-  {{#if data.saved_searches.items ~}}
-  <div class="settings">
-    <p class="mdc-typography--body1">
-      Email frequency
-    </p>
-    <div class="mdc-form-field">
-      <div class="mdc-radio">
-        <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency" checked>
-        <div class="mdc-radio__background">
-          <div class="mdc-radio__outer-circle"></div>
-          <div class="mdc-radio__inner-circle"></div>
-        </div>
-      </div>
-      <label for="daily">Daily</label>
-    </div>
-    <div class="mdc-form-field">
-      <div class="mdc-radio">
-        <input class="mdc-radio__native-control" type="radio" id="weekly" name="frequency" checked>
-        <div class="mdc-radio__background">
-          <div class="mdc-radio__outer-circle"></div>
-          <div class="mdc-radio__inner-circle"></div>
-        </div>
-      </div>
-      <label for="weekly">Weekly</label>
-    </div>
-  </div>
-  {{/if ~}}
+  <div class="t-margin-full pull-right">{{> email_frequency}}</div>
   <h1 class="mdc-typography--headline3 v-margin-full">
     Searches
   </h1>
