--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -32,46 +32,49 @@
     </h2>
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
           <h3 class="mdc-typography--headline5 v-margin-full">
             Email frequency for new job alerts
           </h3>
           {{> email_frequency}}
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
           <h3 class="mdc-typography--headline5 v-margin-full">
             Shortlist alerts
           </h3>
           {{> shortlist_alerts}}
         </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+          <h3 class="mdc-typography--headline5 v-margin-full">
+            Unsubscribe 
+          </h3>
+          <button class="mdc-button mdc-button--raised mdc-button--fullwidth">
+            <span class="far fa-envelope mdc-list-item__graphic" aria-hidden="true"></span>
+            Stop all emails
+          </button>
+        </div>
       </div>
     </div>
-    
-    <h3 class="mdc-typography--headline5 v-margin-full">
-      Unsubscribe 
-    </h3>
-    <button class="mdc-button mdc-button--raised">
-      <span class="far fa-envelope mdc-list-item__graphic" aria-hidden="true"></span>
-      Stop all emails
-    </button>
   </section>
+
+  <hr />
 
   <section class="settings-section">
     <h2 class="mdc-typography--headline4 v-margin-full">
       Account settings
     </h2>
 
-    <h3 class="mdc-typography--headline5">
-      {{#if (contains (map @root.data.auth.providerData (getProp "providerId")) "password")}}
-        Change password
-      {{else}}
-        Set password
-        <small>allows sign-in with the email address {{@root.data.auth.email}}</small>
-      {{/if}}
-    </h3>
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+          <h3 class="mdc-typography--headline5">
+            {{#if (contains (map @root.data.auth.providerData (getProp "providerId")) "password")}}
+              Change password
+            {{else}}
+              Set password
+              <small>allows sign-in with the email address {{@root.data.auth.email}}</small>
+            {{/if}}
+          </h3>
           <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
             <input type="password" id="change-password-password" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
@@ -80,8 +83,6 @@
             </label>
             <div class="mdc-line-ripple"></div>
           </div>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
           <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
             <input type="password" id="change-password-confirm" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
@@ -90,55 +91,40 @@
             </label>
             <div class="mdc-line-ripple"></div>
           </div>
+          <button class="mdc-button mdc-button--raised mdc-button--change_password mdc-button--fullwidth" id="change-password">
+            <span class="far fa-lock mdc-list-item__graphic" aria-hidden="true"></span>
+            Change password
+          </button>
         </div>
-      </div>
-    </div>
-    
-    <button class="mdc-button mdc-button--raised mdc-button--change_password pull-right" id="change-password">
-      <span class="far fa-lock mdc-list-item__graphic" aria-hidden="true"></span>
-      Change password
-    </button>
-
-    <h3 class="mdc-typography--headline5">
-      Linked accounts 
-    </h3>
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        {{#each (split "google,facebook,twitter" ",")}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            {{> linkChip 
-                provider=this 
-                linked=(contains (map @root.data.auth.providerData (getProp "providerId")) (concat this ".com"))
-            }}
-          </div>
-        {{/each}}
-      </div>
-    </div>
-
-    <h3 class="mdc-typography--headline5">
-      Account data
-    </h3>
-    <div class="goodmoves-settings-account">
-      <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <button class="mdc-button mdc-button--raised mdc-button--export" data-dialog-target="#export-user-dialog">
-              <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
-              Export account settings
-            </button>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <button class="mdc-button mdc-button--raised mdc-button--import" data-dialog-target="#import-user-dialog">
-              <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
-              Import account settings
-            </button>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <button class="mdc-button mdc-button--raised mdc-button--delete" data-dialog-target="#delete-user-dialog">
-              <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
-              Delete account
-            </button>
-          </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+          <h3 class="mdc-typography--headline5">
+            Linked accounts 
+          </h3>
+          {{#each (split "google,facebook,twitter" ",")}}
+            <div class="v-margin">
+              {{> linkChip 
+                  provider=this 
+                  linked=(contains (map @root.data.auth.providerData (getProp "providerId")) (concat this ".com"))
+              }}
+            </div>
+          {{/each}}
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+          <h3 class="mdc-typography--headline5">
+            Account data
+          </h3>
+          <button class="mdc-button mdc-button--raised mdc-button--export mdc-button--fullwidth v-margin" data-dialog-target="#export-user-dialog">
+            <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
+            Export account settings
+          </button>
+          <button class="mdc-button mdc-button--raised mdc-button--import mdc-button--fullwidth v-margin" data-dialog-target="#import-user-dialog">
+            <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
+            Import account settings
+          </button>
+          <button class="mdc-button mdc-button--raised mdc-button--delete mdc-button--fullwidth v-margin" data-dialog-target="#delete-user-dialog">
+            <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
+            Delete account
+          </button>
         </div>
       </div>
     </div>
