--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -153,7 +153,7 @@
           </span>
         </div>
         {{else}}
-        <div class="mdc-typography--headline5">
+        <div class="mdc-typography--headline5 v-margin-full">
           Latest jobs&ensp;
           <span class="mdc-typography--body1">
             <a href="/search?sort=newest&page=2">Find more</a>
