--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -1,7 +1,10 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
-  <div class="t-margin-full pull-right">{{> email_frequency}}</div>
+  <div class="settings">
+    <span class="mdc-typography--body1">Email frequency</span>
+    {{> email_frequency}}
+  </div>
   <h1 class="mdc-typography--headline3 v-margin-full">
     Searches
   </h1>
