--- a/sites/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/sites/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -43,9 +43,9 @@
     Find out more about <a href="https://goodhq.org/{{goodhq_organisation.xid}}">{{{organisation.title}}}</a> on <a href="https://goodhq.org">Good HQ</a>
   </div>
   {{#compare ../data.goodhq.volunteering.hits.total ">" 0 ~}}
-  <div class="mdc-typography--headline7">
-    Volunteering opportunities
-  </div>
+  <p class="mdc-typography--body1">
+    <strong>Volunteering opportunities</strong>
+  </p>
   <div class="mdc-layout-grid equal-height">
     <div class="mdc-layout-grid__inner">
       {{#each ../data.goodhq.volunteering.hits.hits ~}}
@@ -63,9 +63,9 @@
   {{/compare ~}}
 
   {{#compare ../data.goodhq.posts.hits.total ">" 0 ~}}
-  <div class="mdc-typography--headline7">
-    Posts
-  </div>
+  <p class="mdc-typography--body1">
+    <strong>Posts</strong>
+  </p>
   <div class="mdc-layout-grid equal-height">
     <div class="mdc-layout-grid__inner">
       {{#each ../data.goodhq.posts.hits.hits ~}}
@@ -83,9 +83,9 @@
   {{/compare ~}}
 
   <!-- {{#compare ../data.goodhq.reviews.hits.total ">" 0 ~}}
-  <div class="mdc-typography--headline5">
-    Reviews
-  </div>
+  <p class="mdc-typography--body1">
+    <strong>Reviews</strong>
+  </p>
   <div class="mdc-layout-grid equal-height">
     <div class="mdc-layout-grid__inner">
       {{#each ../data.goodhq.reviews.hits.hits ~}}
