--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -1,7 +1,11 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-shortlist">
-  <div class="t-margin-full pull-right">{{> shortlist_alerts}}</div>
+  <div class="t-margin-full pull-right">
+    <div class="t-margin">
+      {{> shortlist_alerts}}
+    </div>
+  </div>
   <h1 class="mdc-typography--headline3 v-margin-full">
     Shortlist
   </h1>
