--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -947,7 +947,7 @@ a {
     box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
   }
   .mdc-card__info--organisation-title {
-    margin: 0 0 $unit;
+    margin: 0 0 $unit/2;
   }
   .mdc-card__info--vacancy .detailed-info,
   .organisation-type {
