--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -656,6 +656,7 @@ a:hover {
 .mdc-card .mdc-chip.mdc-chip--selected:hover,
 .mdc-chip.mdc-chip--selected:hover {
   background-color: $mdc-theme-primary-dark;
+  color: white;
 }
 
 .noselect {
@@ -1177,15 +1178,9 @@ hr {
         }
       }
     }
-    // .mdc-card__action--shortlist .fa-heart {
-    //   color: $mdc-theme-primary-dark;
-    // }
     .mdc-chip .mdc-chip__checkmark-path {
       stroke: white;
     }
-    // .mdc-card__action--shortlist:hover .fa-heart {
-    //   font-weight: 900;
-    // }
   }
 }
 .mdc-card.vacancy-shortlisted {
