--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -533,8 +533,12 @@ footer h3,
   }
 }
 .goodmoves-settings {
+  margin-bottom: $unit*1.5;
   .settings {
     float: none;
+    .mdc-form-field .mdc-radio {
+      top: auto !important;
+    }
   }
 }
 .goodmoves-saved-searches {
