--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -16,11 +16,6 @@
     </header>
     <section id="save-search-dialog-description" class="mdc-dialog__body">
       <div class="mdc-text-field mdc-text-field--box" data-mdc-auto-init="MDCTextField">
-        <p>
-        {{~#each @root.request.params.query.roles~}}
-          {{~getProperty (getProperty @root.data.termsMaps.roles.slugsMap this) "term"~}}
-        {{~/each~}}
-        </p>
         <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input" value="
 {{~#with @root.request.params.query~}}
   {{~#if keywords~}}
@@ -99,9 +94,9 @@
               keywords=@root.request.params.query.keywords
               salary_min=@root.request.params.query.salary_min
               salary_max=@root.request.params.query.salary_max
-              roles=@root.request.params.query.roles
-              sectors=@root.request.params.query.sectors
-              statuses=@root.request.params.query.statuses
+              roles=(sort @root.request.params.query.roles)
+              sectors=(sort @root.request.params.query.sectors)
+              statuses=(sort @root.request.params.query.statuses)
               distance=@root.request.params.query.distance
               lat=@root.request.params.query.lat
               lng=@root.request.params.query.lng
